@@ -1,16 +1,15 @@
 package iskallia.vault.world.gen.decorator;
 
 import com.mojang.serialization.Codec;
-import iskallia.vault.Vault;
+import iskallia.vault.VaultMod;
 import iskallia.vault.init.ModBlocks;
 import iskallia.vault.util.PlayerFilter;
-import iskallia.vault.world.data.VaultRaidData;
 import iskallia.vault.world.gen.structure.JigsawPiecePlacer;
 import iskallia.vault.world.vault.VaultRaid;
 import iskallia.vault.world.vault.gen.piece.VaultPiece;
-import iskallia.vault.world.vault.logic.objective.ScavengerHuntObjective;
+import iskallia.vault.world.vault.logic.objective.LegacyScavengerHuntObjective;
 import iskallia.vault.world.vault.logic.objective.TreasureHuntObjective;
-import iskallia.vault.world.vault.modifier.ChestModifier;
+import iskallia.vault.world.vault.modifier.modifier.DecoratorAddModifier;
 import iskallia.vault.world.vault.player.VaultPlayer;
 import iskallia.vault.world.vault.player.VaultRunner;
 import java.util.HashSet;
@@ -20,52 +19,48 @@ import java.util.Set;
 import java.util.function.BiPredicate;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
-import net.minecraft.block.BlockState;
-import net.minecraft.block.Blocks;
-import net.minecraft.util.Direction;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.ChunkPos;
-import net.minecraft.util.math.MutableBoundingBox;
-import net.minecraft.world.ISeedReader;
-import net.minecraft.world.IWorld;
-import net.minecraft.world.gen.ChunkGenerator;
-import net.minecraft.world.gen.feature.Feature;
-import net.minecraft.world.gen.feature.NoFeatureConfig;
-import net.minecraft.world.server.ServerWorld;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
+import net.minecraft.server.level.ServerLevel;
+import net.minecraft.world.level.ChunkPos;
+import net.minecraft.world.level.LevelAccessor;
+import net.minecraft.world.level.WorldGenLevel;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.levelgen.feature.Feature;
+import net.minecraft.world.level.levelgen.feature.FeaturePlaceContext;
+import net.minecraft.world.level.levelgen.feature.configurations.NoneFeatureConfiguration;
+import net.minecraft.world.level.levelgen.structure.BoundingBox;
 import net.minecraftforge.event.RegistryEvent.Register;
 
-public class BreadcrumbFeature extends Feature<NoFeatureConfig> {
-   public static Feature<NoFeatureConfig> INSTANCE;
+public class BreadcrumbFeature extends Feature<NoneFeatureConfiguration> {
+   public static Feature<NoneFeatureConfiguration> INSTANCE;
 
-   public BreadcrumbFeature(Codec<NoFeatureConfig> codec) {
+   public BreadcrumbFeature(Codec<NoneFeatureConfiguration> codec) {
       super(codec);
    }
 
-   public boolean func_241855_a(ISeedReader world, ChunkGenerator gen, Random rand, BlockPos pos, NoFeatureConfig config) {
-      VaultRaid vault = VaultRaidData.get(world.func_201672_e()).getAt(world.func_201672_e(), pos);
-      if (vault == null) {
-         return false;
-      } else {
-         placeBreadcrumbFeatures(vault, world, (at, state) -> world.func_180501_a(at, state, 2), rand, pos);
-         return false;
-      }
+   public boolean place(FeaturePlaceContext<NoneFeatureConfiguration> context) {
+      WorldGenLevel world = context.level();
+      BlockPos pos = context.origin();
+      Random rand = context.random();
+      return false;
    }
 
-   public static void generateVaultBreadcrumb(VaultRaid vault, ServerWorld sWorld, List<VaultPiece> pieces) {
+   public static void generateVaultBreadcrumb(VaultRaid vault, ServerLevel sWorld, List<VaultPiece> pieces) {
       runGeneration(
          () -> {
             Predicate<BlockPos> filter = posx -> false;
             Set<ChunkPos> chunks = new HashSet<>();
 
             for (VaultPiece piece : pieces) {
-               MutableBoundingBox box = piece.getBoundingBox();
-               filter = filter.or(box::func_175898_b);
-               ChunkPos chMin = new ChunkPos(box.field_78897_a >> 4, box.field_78896_c >> 4);
-               ChunkPos chMax = new ChunkPos(box.field_78893_d >> 4, box.field_78892_f >> 4);
+               BoundingBox box = piece.getBoundingBox();
+               filter = filter.or(box::isInside);
+               ChunkPos chMin = new ChunkPos(box.minX() >> 4, box.minZ() >> 4);
+               ChunkPos chMax = new ChunkPos(box.maxX() >> 4, box.maxZ() >> 4);
 
-               for (int x = chMin.field_77276_a; x <= chMax.field_77276_a; x++) {
-                  for (int z = chMin.field_77275_b; z <= chMax.field_77275_b; z++) {
+               for (int x = chMin.x; x <= chMax.x; x++) {
+                  for (int z = chMin.z; z <= chMax.z; z++) {
                      chunks.add(new ChunkPos(x, z));
                   }
                }
@@ -74,13 +69,9 @@ public class BreadcrumbFeature extends Feature<NoFeatureConfig> {
             Predicate<BlockPos> featurePlacementFilter = filter;
 
             for (ChunkPos pos : chunks) {
-               BlockPos featurePos = pos.func_206849_h();
+               BlockPos featurePos = pos.getWorldPosition();
                placeBreadcrumbFeatures(
-                  vault,
-                  sWorld,
-                  (at, state) -> featurePlacementFilter.test(at) ? sWorld.func_180501_a(at, state, 2) : false,
-                  sWorld.func_201674_k(),
-                  featurePos
+                  vault, sWorld, (at, state) -> featurePlacementFilter.test(at) ? sWorld.setBlock(at, state, 2) : false, sWorld.getRandom(), featurePos
                );
             }
          }
@@ -88,61 +79,60 @@ public class BreadcrumbFeature extends Feature<NoFeatureConfig> {
    }
 
    private static void placeBreadcrumbFeatures(
-      VaultRaid vault, ISeedReader world, BiPredicate<BlockPos, BlockState> blockPlacer, Random rand, BlockPos featurePos
+      VaultRaid vault, WorldGenLevel world, BiPredicate<BlockPos, BlockState> blockPlacer, Random rand, BlockPos featurePos
    ) {
-      vault.getActiveObjective(ScavengerHuntObjective.class).ifPresent(objective -> doTreasureSpawnPass(rand, world, blockPlacer, featurePos));
+      vault.getActiveObjective(LegacyScavengerHuntObjective.class).ifPresent(objective -> doTreasureSpawnPass(rand, world, blockPlacer, featurePos));
       vault.getActiveObjective(TreasureHuntObjective.class).ifPresent(objective -> doTreasureSpawnPass(rand, world, blockPlacer, featurePos));
-      if (!vault.getProperties().exists(VaultRaid.PARENT)) {
-         doChestSpawnPass(rand, world, blockPlacer, featurePos, ModBlocks.VAULT_CHEST.func_176223_P());
-         List<VaultPlayer> runners = vault.getPlayers().stream().filter(vaultPlayer -> vaultPlayer instanceof VaultRunner).collect(Collectors.toList());
+      doChestSpawnPass(rand, world, blockPlacer, featurePos, ModBlocks.WOODEN_CHEST.defaultBlockState());
+      List<VaultPlayer> runners = vault.getPlayers().stream().filter(vaultPlayer -> vaultPlayer instanceof VaultRunner).toList();
+      int i = 0;
 
-         for (int i = 0; i < runners.size() - 1; i++) {
-            doChestSpawnPass(rand, world, blockPlacer, featurePos, ModBlocks.VAULT_COOP_CHEST.func_176223_P());
-         }
+      while (i < runners.size() - 1) {
+         i++;
       }
 
-      if (!vault.getProperties().exists(VaultRaid.PARENT)) {
-         placeChestModifierFeatures(vault, world, blockPlacer, rand, featurePos);
-      }
+      placeChestModifierFeatures(vault, world, blockPlacer, rand, featurePos);
    }
 
    private static void placeChestModifierFeatures(
-      VaultRaid vault, ISeedReader world, BiPredicate<BlockPos, BlockState> blockPlacer, Random rand, BlockPos featurePos
+      VaultRaid vault, WorldGenLevel world, BiPredicate<BlockPos, BlockState> blockPlacer, Random rand, BlockPos featurePos
    ) {
-      vault.getActiveModifiersFor(PlayerFilter.any(), ChestModifier.class).forEach(modifier -> {
-         int attempts = modifier.getChestGenerationAttempts();
+      vault.withActiveModifiersFor(PlayerFilter.any(), DecoratorAddModifier.class, (decoratorAddModifier, stackSize) -> {
+         for (int j = 0; j < stackSize; j++) {
+            int attempts = 1;
 
-         for (int i = 0; i < modifier.getAdditionalBonusChestPasses(); i++) {
-            doChestSpawnPass(rand, world, blockPlacer, featurePos, ModBlocks.VAULT_BONUS_CHEST.func_176223_P(), attempts);
+            for (int i = 0; i < decoratorAddModifier.properties().getAttemptsPerChunk(); i++) {
+               doChestSpawnPass(rand, world, blockPlacer, featurePos, ModBlocks.GILDED_CHEST.defaultBlockState(), attempts);
+            }
          }
       });
    }
 
-   private static void doTreasureSpawnPass(Random rand, IWorld world, BiPredicate<BlockPos, BlockState> blockPlacer, BlockPos pos) {
-      doPlacementPass(rand, world, blockPlacer, pos, ModBlocks.SCAVENGER_TREASURE.func_176223_P(), 45, offset -> {});
+   private static void doTreasureSpawnPass(Random rand, LevelAccessor world, BiPredicate<BlockPos, BlockState> blockPlacer, BlockPos pos) {
+      doPlacementPass(rand, world, blockPlacer, pos, ModBlocks.SCAVENGER_TREASURE.defaultBlockState(), 45, offset -> {});
    }
 
-   private static void doChestSpawnPass(Random rand, IWorld world, BiPredicate<BlockPos, BlockState> blockPlacer, BlockPos pos, BlockState toPlace) {
+   private static void doChestSpawnPass(Random rand, LevelAccessor world, BiPredicate<BlockPos, BlockState> blockPlacer, BlockPos pos, BlockState toPlace) {
       doChestSpawnPass(rand, world, blockPlacer, pos, toPlace, 12);
    }
 
    private static void doChestSpawnPass(
-      Random rand, IWorld world, BiPredicate<BlockPos, BlockState> blockPlacer, BlockPos pos, BlockState toPlace, int attempts
+      Random rand, LevelAccessor world, BiPredicate<BlockPos, BlockState> blockPlacer, BlockPos pos, BlockState toPlace, int attempts
    ) {
       doPlacementPass(rand, world, blockPlacer, pos, toPlace, attempts, offset -> {});
    }
 
    private static void doPlacementPass(
-      Random rand, IWorld world, BiPredicate<BlockPos, BlockState> blockPlacer, BlockPos pos, BlockState toPlace, int attempts, Consumer<BlockPos> pass
+      Random rand, LevelAccessor world, BiPredicate<BlockPos, BlockState> blockPlacer, BlockPos pos, BlockState toPlace, int attempts, Consumer<BlockPos> pass
    ) {
       for (int i = 0; i < attempts; i++) {
          int x = rand.nextInt(16);
          int z = rand.nextInt(16);
          int y = rand.nextInt(64);
-         BlockPos offset = pos.func_177982_a(x, y, z);
-         BlockState state = world.func_180495_p(offset);
-         if (state.func_177230_c() == Blocks.field_150350_a
-            && world.func_180495_p(offset.func_177977_b()).func_224755_d(world, offset, Direction.UP)
+         BlockPos offset = pos.offset(x, y, z);
+         BlockState state = world.getBlockState(offset);
+         if (state.getBlock() == Blocks.AIR
+            && world.getBlockState(offset.below()).isFaceSturdy(world, offset, Direction.UP)
             && blockPlacer.test(offset, toPlace)) {
             pass.accept(offset);
          }
@@ -160,8 +150,8 @@ public class BreadcrumbFeature extends Feature<NoFeatureConfig> {
    }
 
    public static void register(Register<Feature<?>> event) {
-      INSTANCE = new BreadcrumbFeature(NoFeatureConfig.field_236558_a_);
-      INSTANCE.setRegistryName(Vault.id("breadcrumb_chest"));
+      INSTANCE = new BreadcrumbFeature(NoneFeatureConfiguration.CODEC);
+      INSTANCE.setRegistryName(VaultMod.id("breadcrumb_chest"));
       event.getRegistry().register(INSTANCE);
    }
 }
